@@ -11,6 +11,28 @@ with qw(Dist::Zilla::Role::FileGatherer);
 
 =head1 SYNOPSIS
 
+  ; ~/.dzil/profiles/default/profile.ini
+  [Author::KENTNL::DistINI]
+
+  ; ~/.dzil/config.ini
+  [%Rights]
+  license_class = Perl_5
+  copyright_holder = Kent Fredric <kentnl@cpan.org>
+
+  [%PAUSE]
+  user = KENTNL
+  password = ; you don't think I'm stupid do you?
+
+  ; ~/.netrc
+  machine api.twitter.com
+    login kentnlrelease
+    password ; still not quite stupid enough
+
+Then
+
+  dzil new Some-Distname
+  # start hacking.
+
 This sets up [@KENTNL] packages the way KENTNL likes it.
 
 This involves initial configuration of the parameters that get
@@ -39,7 +61,7 @@ This code is mostly stolen from the L<Dist::Zilla::Plugin::DistINI> plugin. Blam
 =cut
 
 use Dist::Zilla::File::FromCode;
-use String::Formatter stringf => {
+use String::Formatter named_stringf => {
   -as => 'str_rf' ,
   codes => {
     s =>  sub { "$_" } ,
@@ -61,20 +83,20 @@ sub gather_files {
   my $template;
   {
     ## no critic (RequireInterpolationOfMetachars)
-    $template = join q{\n}, (
-      q( ; Generated by %{GENPACKAGE}s version %{GENVERSION}s at %{GENTIME}s), #
+    $template = join qq{\n}, (
+      q(; Generated by %{GENPACKAGE}s version %{GENVERSION}s at %{GENTIME}s), #
       'name             = %{name}s',                    #
       'author           = %{author}s',                  #
       'license          = %{license}s',                 #
       'copyright_holder = %{copyrightholder}s',         #
       $empty,                                           #
-      q( ; Uncomment this to bootstrap via self ),      #
-      q( ; [=inc::lib]),                                #
+      q(; Uncomment this to bootstrap via self ),       #
+      q(; [=inc::lib]),                                 #
       $empty,                                           #
       '[@KENTNL]',                                      #
       'version_major     = 0',                          #
       'version_minor     = 1',                          #
-      q( ; the following data denotes when this minor was minted) , #
+      q(; the following data denotes when this minor was minted) , #
       'version_rel_year  = %{rel_year}n',               #
       'version_rel_month = %{rel_month}n',              #
       'version_rel_day   = %{rel_day}n',                #
@@ -105,7 +127,7 @@ sub gather_files {
         license => $license,
         copyrightholder => $zilla->copyright_holder,
         rel_year  => (localtime)[5] + 1900,
-        rel_month => (localtime)[4],
+        rel_month => (localtime)[4] + 1,
         rel_day   => (localtime)[3],
         rel_hour  => (localtime)[2],
         tz        => 'Pacific/Auckland',
