@@ -2,6 +2,9 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+        Added Dist::Zilla::Plugin::Author::KENTNL::DistINI.
+        Now I can just 'dzil new Module-Name' and start hacking =).
+
 0.01002419 2010-06-10 15:38:51 Pacific/Auckland
         Add Test::EOL dependencies.
         This release tests my hacks to Dist::Zilla in the eol department.
